Gray accent for post date no longer overlaps text no mobile

--- a/assets/main/sass/components/_section.scss
+++ b/assets/main/sass/components/_section.scss
@@ -70,7 +70,7 @@
 					display: block;
 					position: absolute;
 					top: 50%;
-					width: calc(39% - 6rem);
+					width: calc(50% - 12rem);
 					border-top: solid 2px;
 				}
 
